[package]
name = "screeps"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
arrayvec = "0.7.6"
bevy = { version = "0.16.0", default-features = false, features = ["multi_threaded", "std"] }
rand = "0.9.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
v8 = "137.1.0"
